--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,21 +2,50 @@ nav {
     background-color: darkblue;
     padding: 20px;
 }
+
 nav a {
     color: white;
     display: block;
     padding: 20px;
 }
+
 h1 { 
     color: darkblue;
 }
-img {
+
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
+
 p { 
-    padding: 10px;
+    padding: 0;
+}
+
+main {
+    max-width: 840px;
+}
+
+aside {
+    width: 20rem;
+    margin: 1px;
+    border: 1px rgb(0, 0, 0 / 0.2);
+    padding: 1rem;
+    background-color: rgb(103, 219, 115);
+    color: rgb(252, 225, 225);
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
 }
