--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,13 @@
 :root {
-    --main-color: #00BFFF;
-    --secondary-color: #3CDFDF;
-    --accent1-color: #47D680;
-    --accent2-color: #FFEFEF;
+    --main-color: #a1ffff;
+    --secondary-color: #a1ffff76;
+    --accent1-color: #0b882e;
+    --accent2-color: #ffdcf8;
+    --border-color: rgb(75, 40, 8);
+}
+
+* {
+    /* background-color: var(--secondary-color); */
 }
 
 header {
@@ -35,7 +40,6 @@ h1 {
     font-weight: 800;
     font-style: normal;
     padding: 20px;
-    border: var(--secondary-color) 5px;
     color: var(--accent1-color);
     position: absolute;
     top: 20px; left: 800px;
@@ -70,7 +74,17 @@ h2 {
     font-style: normal;
     color: var(--accent1-color);
     padding: 20px;
-    border: var(--secondary-color) 5px;
+    display: grid;
+    justify-content: center;
+}
+
+.contact-info {
+    border: 1px solid var(--border-color);
+}
+
+.contact-info p {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 p {
@@ -80,7 +94,6 @@ p {
     font-size: 25px;
     color: var(--accent1-color);
     padding: 20px;
-    border: var(--secondary-color) 5px;
 }
 
 .history {
@@ -94,7 +107,7 @@ p {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
     column-gap: 50px;
-    justify-content: space-evenly;
+    justify-content: center;
 	align-items: center;
 }
 
@@ -103,7 +116,6 @@ p {
     justify-content: center;
     grid-column-start: 1;
     grid-column-end: 6;
-
 }
 
 .adventure img {
@@ -123,7 +135,9 @@ footer {
 }
 
 footer p {
-    align-items: center
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .sociallinks {
@@ -133,3 +147,83 @@ footer p {
     gap: 30px;
     justify-content: flex-end;
 }
+
+.map {
+    display: grid;
+    justify-content: center;
+    padding: 20px;
+}
+
+form {
+    width: 1500px;
+    margin: auto;
+    padding: 0;
+    border: 2px solid var(--border-color);
+    border-radius: 0.5rem;
+    background-color: var(--secondary-color);
+    display: grid;
+}
+
+fieldset {
+    display: grid;
+    grid-gap: 0.75rem;
+    margin: 1rem;
+    border: 1px solid var(--border-color);
+    padding: 1rem;
+}
+
+legend {
+    padding: 0.5rem;
+    color: rgb(75, 40, 8);
+    font-size: 1.3em;
+}
+
+label {
+    text-align: left;
+    padding-left: 1rem;
+}
+
+input, textarea {
+    padding: 0.5rem;
+    font-size: 1.1rem;
+}
+
+input[type="checkbox"] {
+    width: 25px;
+    height: 25px;
+    vertical-align: bottom;
+}
+
+button {
+    margin: 1rem;
+    background-color: var(--accent1-color);
+    color: rgb(255, 233, 255);
+    border: none;
+    border-radius: .5rem;
+    padding: .75rem;
+    font-size: 1.2rem;
+}
+  
+button:hover {
+    background-color: rgb(40, 160, 21);
+}
+
+.textarea-label {
+    margin-bottom: 5px;
+}
+
+.form-item {
+    display: grid;
+    align-items: center;
+}
+
+.purpose {
+    display: flex;      
+    gap: 15px;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.column2 {
+    grid-template-columns: 1fr 2fr;
+} 
