Fixing final project grade

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -343,11 +343,39 @@ button:hover {
     height: fit-content;
 } 
 
-.trip-list {
+table {
     border: 1px solid var(--border-color); 
+    border-collapse: collapse;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
     width: 33%;
     padding: 20px;
     margin: 50px 20px;
+}
+
+caption {
+    caption-side: top;
+    padding-bottom: 20px;
+    font-weight: bold;
+}
+
+thead,
+tfoot {
+  background-color: #6efdfd;
+}
+
+th,
+td {
+  border: 1px solid var(--border-color);
+  padding: 8px 10px;
+}
+
+td:last-of-type {
+    text-align: center;
+}
+
+tbody > tr:nth-of-type(even) {
+    background-color: #bcfefe;
 }
 
 .trip {
